# http-scrapper

./: .gitignore  README.md  http_crawler_404_check.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/http_scrapper/: __main__.py  cli.py  crawler.py  export.py
tests/: test_crawler.py  test_export.py
